# zero2prod

./: Cargo.toml  Dockerfile  README.md  spec.yaml
migrations/: 20221107122858_make_status_not_null_in_subscriptions.sql  20221107124349_create_subscription_tokens_table.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs
