[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.0.0"
tokio = { version = "1", features = ["rt", "macros"] }
serde = { version = "1", features = ["derive"] }
config = "0.13"
uuid = {version = "1", features = ["v4"]}
chrono = {version = "0.4.22", default-features = false, features = ["clock"]}
log = "0.4"
tracing = {version = "0.1", features = ["log"]}
tracing-subscriber = {version = "0.3", features = ["registry", "env-filter"]}
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
secrecy = {version = "0.8", features = ["serde"]}
tracing-actix-web =  "0.6"
serde-aux = "3"
unicode-segmentation = "1.10.0"
validator = "0.16.0"
rand = { version = "0.8", features=["std_rng"] }
[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]

[dependencies.reqwest]
reqwest = "0.11"
default-features = false
features = ["json", "rustls-tls"]

[dev-dependencies]
once_cell = "1.7.2"
claim = "0.5.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
fake = "~2.3.0"
wiremock = "0.5"
serde_json = "1.0.87"
